# fattestapi

./: .buildinfo  .flake8  AUTHORS.rst  LICENSE  Makefile  README.md  bumpversion.cfg  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/: DOCUMENT.yml  ISSUE_TEMPLATE.md  sphinx.yml
.github/ISSUE_TEMPLATE/: ask_question.md  feature_request.md
.github/workflows/: deploy.yml  document.yml
_modules/: index.html
_sources/apidocs/: index.rst
_sources/guide/: installation.md
apidocs/: index.html
apidocs/fattestapi/: fattestapi.auth.html  fattestapi.cli.html  fattestapi.db.html  fattestapi.db.sqlalchemy.base_model.html  fattestapi.db.sqlalchemy.html  fattestapi.db.sqlalchemy.mixins.html  fattestapi.db.transaction.html  fattestapi.factory.factory.html  fattestapi.factory.html  fattestapi.factory.warnings.html  fattestapi.html  fattestapi.repositories.base.html  fattestapi.repositories.crud.html  fattestapi.repositories.html  fattestapi.repositories.mongodb.html  fattestapi.repositories.redis.html  fattestapi.repositories.sqlalchemy.decorators.html  fattestapi.repositories.sqlalchemy.html  fattestapi.repositories.sqlalchemy.sqlalchemy.html  fattestapi.schemas.fields.html  fattestapi.schemas.filtering.html  fattestapi.schemas.html  fattestapi.schemas.pagination.html  fattestapi.schemas.sorting.html  fattestapi.services.html
contributing/: authors.html  contributing.html
docs/: Makefile  authors.md  authors.rst  conf.py  contributing.md  contributing.rst  index.md  index.rst  installation.md  installation.rst  make.bat  requirements.txt
docs/contributing/: authors.md  contributing.md
docs/docfiles/: conf.py  index.rst
docs/src/: index.md
fattestapi/: __init__.py
fattestapi/db/: __init__.py
fattestapi/factory/: __init__.py  app_factory.py  container.py  exceptions.py  extensions.py  factory.py
fattestapi/httptypes/: __init__.py
fattestapi/repositories/: __init__.py  crud.py
fattestapi/schemas/: __init__.py  filtering.py  pagination.py  sorting.py
fattestapi/utils/: __init__.py
fullask_rest_framework/: __init__.py  cli.py
fullask_rest_framework/core/: fullask.py
fullask_rest_framework/factory/: app_factory.py  factory.py
fullask_rest_framework/repositories/: crud.py  sqlalchemy.py
fullask_rest_framework/schemas/: filtering.py  pagination.py  sorting.py
guide/: installation.html  usage.html
helloworld/: app.py
src/: index.html
src/contributing/: authors.html  contributing.html
src/guide/: installation.html  usage.html
tests/: __init__.py  test_fullask_rest_framework.py
tests/admin/: test_admin.py
(+40 files in other folders)
