[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project]
name = "FattestAPI"
description = "The fattest way to develop REST APIs. based on FastAPI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "tgoddessana", email = "twicegoddessana1229@gmail.com" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi[all]",
    "alembic",
]
dynamic = ["version"]

[project.scripts]
fullask-manager = "fattestapi.cli:main"

[tool.flit.module]
name = "fattestapi"

[tool.flit.sdist]
include = [
    "fattestapi/",
    "README.md",
]
exclude = [
    "docs/",
    "tests/",
    ".github/"
]

[tool.poetry]
name = "FattestAPI"
version = "0.1.0"
description = "The fattest way to develop REST APIs. based on FastAPI."
authors = ["tgoddessana <twicegoddessana1229@gmail.com>"]

[tool.poetry.dependencies]
pip = "*"
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.100.0" }
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
wheel = "^0.40.0"
twine = "^4.0.2"
pre-commit = "^3.3.2"
bumpversion = "*"
flit = "^3.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
flake8 = "^6.0.0"
tox = "*"
mypy = "*"
coverage = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-rtd-theme = "^1.2.0"
myst-parser = "*"
jinja2 = "^3.0"

[tool.mypy]
exclude = ["docs"]
ignore_missing_imports = true
